--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,12 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "objr"
 description = "objects runtime"
-version = "131"
+version = "140"
 authors = [
     {name = "xobjectz", email = "objx@proton.me"},
 ]
 readme = "README.rst"
 license = {text="Public Domain"}
-dependencies = [
-    "objx==82",
-]
 classifiers = [ 
     'Development Status :: 3 - Alpha',
     'License :: Public Domain',
@@ -34,8 +31,13 @@ classifiers = [
 
 
 [tool.setuptools]
+script-files = [
+    "bin/objr",
+]
 packages = [
-    'objr'
+    'objr',
+    'objr.modules',
+    'objr.user'
 ]
 zip-safe=true
 
